{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 50,
  "lineage": "a58791b1-eb9b-fcbe-6c1b-5e2fcad019fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "master_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0014ce3e52359afbd",
            "arn": "arn:aws:ec2:eu-north-1:381492285268:instance/i-088b256cbf0695430",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "tags": {
                  "device_name": "Terraform"
                },
                "throughput": 0,
                "volume_id": "vol-07a6e7678394cdabb",
                "volume_size": 10,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-088b256cbf0695430",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Stepik1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04a21949ace18fc04",
            "private_dns": "ip-172-31-25-108.eu-north-1.compute.internal",
            "private_ip": "172.31.25.108",
            "public_dns": "ec2-13-51-108-117.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.51.108.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "tags": {
                  "device_name": "Terraform"
                },
                "throughput": 0,
                "volume_id": "vol-07a6e7678394cdabb",
                "volume_size": 10,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "master-host"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0559735b03705c2c0",
            "tags": {
              "Name": "MasterHost"
            },
            "tags_all": {
              "Name": "MasterHost"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0da9faa16b9cb025b"
            ]
          },
          "dependencies": [
            "aws_security_group.master_host"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0014ce3e52359afbd",
            "arn": "arn:aws:ec2:eu-north-1:381492285268:instance/i-074dead1fe698f5f6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "tags": {
                  "device_name": "Terraform"
                },
                "throughput": 0,
                "volume_id": "vol-08b6ca56c89597297",
                "volume_size": 10,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-074dead1fe698f5f6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Stepik1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0494a811ffd509b29",
            "private_dns": "ip-172-31-23-238.eu-north-1.compute.internal",
            "private_ip": "172.31.23.238",
            "public_dns": "ec2-51-20-119-69.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.20.119.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "tags": {
                  "device_name": "Terraform"
                },
                "throughput": 0,
                "volume_id": "vol-08b6ca56c89597297",
                "volume_size": 10,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "nodes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0559735b03705c2c0",
            "tags": {
              "Name": "Node-1"
            },
            "tags_all": {
              "Name": "Node-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e0b927f623dcd1a8"
            ]
          },
          "dependencies": [
            "aws_security_group.nodes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0014ce3e52359afbd",
            "arn": "arn:aws:ec2:eu-north-1:381492285268:instance/i-0d9c66ec7257b630a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "tags": {
                  "device_name": "Terraform"
                },
                "throughput": 0,
                "volume_id": "vol-0623f693952226c76",
                "volume_size": 10,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d9c66ec7257b630a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Stepik1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d3765852ae93c59c",
            "private_dns": "ip-172-31-30-84.eu-north-1.compute.internal",
            "private_ip": "172.31.30.84",
            "public_dns": "ec2-13-49-78-167.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.49.78.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "tags": {
                  "device_name": "Terraform"
                },
                "throughput": 0,
                "volume_id": "vol-0623f693952226c76",
                "volume_size": 10,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "nodes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0559735b03705c2c0",
            "tags": {
              "Name": "Node-2"
            },
            "tags_all": {
              "Name": "Node-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e0b927f623dcd1a8"
            ]
          },
          "dependencies": [
            "aws_security_group.nodes"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0014ce3e52359afbd",
            "arn": "arn:aws:ec2:eu-north-1:381492285268:instance/i-046e18d9635db4990",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "tags": {
                  "device_name": "Terraform"
                },
                "throughput": 0,
                "volume_id": "vol-0b3e2459769571508",
                "volume_size": 10,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-046e18d9635db4990",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Stepik1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05255dba03cc24d4f",
            "private_dns": "ip-172-31-29-251.eu-north-1.compute.internal",
            "private_ip": "172.31.29.251",
            "public_dns": "ec2-51-21-129-105.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.129.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "tags": {
                  "device_name": "Terraform"
                },
                "throughput": 0,
                "volume_id": "vol-0b3e2459769571508",
                "volume_size": 10,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "nodes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0559735b03705c2c0",
            "tags": {
              "Name": "Node-3"
            },
            "tags_all": {
              "Name": "Node-3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e0b927f623dcd1a8"
            ]
          },
          "dependencies": [
            "aws_security_group.nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:381492285268:security-group/sg-0da9faa16b9cb025b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da9faa16b9cb025b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2377,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2377
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4789
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "master-host",
            "name_prefix": "",
            "owner_id": "381492285268",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0735d86dc4d384819"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:381492285268:security-group/sg-0e0b927f623dcd1a8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0b927f623dcd1a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2377,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2377
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4789
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nodes",
            "name_prefix": "",
            "owner_id": "381492285268",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0735d86dc4d384819"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}